--- a/keil_projects/proj_template/proj_template.uvprojx
+++ b/keil_projects/proj_template/proj_template.uvprojx
@@ -200,7 +200,7 @@
             <NoZi1>0</NoZi1>
             <NoZi2>0</NoZi2>
             <NoZi3>0</NoZi3>
-            <NoZi4>0</NoZi4>
+            <NoZi4>1</NoZi4>
             <NoZi5>0</NoZi5>
             <Ro1Chk>0</Ro1Chk>
             <Ro2Chk>0</Ro2Chk>
@@ -319,7 +319,7 @@
             <OneElfS>1</OneElfS>
             <Strict>0</Strict>
             <EnumInt>0</EnumInt>
-            <PlainCh>0</PlainCh>
+            <PlainCh>1</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
             <wLevel>2</wLevel>
@@ -717,6 +717,16 @@
               <FileName>queue.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\src\application\flash_manager\src\queue.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>mcu_hal</GroupName>
+          <Files>
+            <File>
+              <FileName>mcu_hal.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\proj_template\mcu_hal.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2126,6 +2136,16 @@
               <FileName>queue.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\src\application\flash_manager\src\queue.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>mcu_hal</GroupName>
+          <Files>
+            <File>
+              <FileName>mcu_hal.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\proj_template\mcu_hal.c</FilePath>
             </File>
           </Files>
         </Group>
